# dreamsound

./: .gitignnore  .gitignore  DreamSound_v_1.ipynb  README.md  requirements.txt  setup.cfg  tox.ini  yamnet_downloader.py
docs/: DreamSound_Package_Example.ipynb  DreamSound_v_1.ipynb
docs/logs/: iteration_walk.txt
docs/paper/: Makefile
docs/paper/src/: dreamsound.aux  dreamsound.bib  dreamsound.out  dreamsound.tex  icad2021.sty
docs/paper/txt/: abstract.txt  paper.txt
docs/papers/: dreamsound.bib  dreamsound.tex
dreamsound/: __init__.py  dreamsound.py
dreamsound/dreamsound_fdch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dreamsound/: __init__.py  dreamsound.py
tests/: dreamsound_test.py  test.py
