 [metadata]
# replace with your username:
name = dreamsound-fdch
version = 0.0.1
author = Fede Camara Halac
author_email = fch226@nyu.edu
description = DreamSound Class for CNN Activation Layer Sonification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdch/dreamsound
project_urls =
    Bug Tracker = https://github.com/fdch/dreamsound/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = dreamsound
install_requires = 
    requests
    numpy
    matplotlib
    IPython
    librosa
    tensorflow