[metadata]
name = dreamsound
version = 0.1.4.2
author = Fede Camara Halac
author_email = fch226@nyu.edu
description = DreamSound Class for CNN Activation Layer Sonification
long_description = file: README.md
long_description_content_type = text/markdown
keywords= deep learning, sound, yamnet
url = https://github.com/fdch/dreamsound
project_urls =
    Bug Tracker = https://github.com/fdch/dreamsound/issues
classifiers =
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    numpy
    matplotlib
    librosa
    tensorflow

[options.packages.find]
where = src

